@@ -1,4 +1,4 @@
-package faang.school.urlshortenerservice.service.hash;
+package faang.school.urlshortenerservice.service.batchsaving;
 
 import faang.school.urlshortenerservice.entity.hash.Hash;
 import jakarta.persistence.EntityManager;
@@ -9,34 +9,35 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.util.Arrays;
 import java.util.List;
 
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
 
 @ExtendWith(MockitoExtension.class)
-public class HashServiceTest {
-    @InjectMocks
-    private HashService hashService;
+public class BatchSaveServiceTest {
 
     @Mock
     private EntityManager entityManager;
 
-    private int batchSize = 2;
+    @InjectMocks
+    private BatchSaveService batchSaveService;
 
     @BeforeEach
     public void setUp() {
-        hashService.setBatchSize(2);
+        batchSaveService.setBatchSize(2);
     }
 
     @Test
-    public void testSaveHashes() {
-        List<String> hashList = List.of("hash1", "hash2", "hash3", "hash4");
+    public void testSaveEntities() {
+        List<String> dataList = Arrays.asList("hash1", "hash2", "hash3", "hash4");
 
-        hashService.saveHashes(hashList);
+        batchSaveService.saveEntities(dataList, Hash.class);
 
         verify(entityManager, times(4)).persist(any(Hash.class));
+
         verify(entityManager, times(3)).flush();
         verify(entityManager, times(3)).clear();
     }
